crates/seiso_rules/tests/snapshots/engine__ptr003_example.snap
---
source: crates/seiso_rules/tests/engine.rs
expression: result.diagnostics
---
[
  {
    "code": "PTR003",
    "message": "This source pointer names no file or symbol.",
    "filename": "docs/guide.md",
    "location": {
      "row": 4,
      "column": 28
    },
    "end_location": {
      "row": 4,
      "column": 42
    },
    "byte_range": {
      "start": 47,
      "end": 61
    },
    "fix": null,
    "url": null,
    "related": [],
    "suggestion": "Name the source file and a searchable symbol, or link directly to the relevant definition."
  }
]
